getPlagueName wurde vorher anders aufgerufen und SonarLint Warning